dialog text/formatting

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -658,11 +658,18 @@
   <data name="InvalidLinkDialog.PrimaryButtonText" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="UnopenedUriText" xml:space="preserve">
+    <value>{}</value>
+    <comment> {} will be replaced with the URI we could not open or parse </comment>
+  </data>
   <data name="UnsupportedSchemeContent" xml:space="preserve">
     <value>The scheme "{0}" is not supported. </value>
     <comment>{0} will be replaced with the scheme the user is trying to use.</comment>
   </data>
   <data name="UnsupportedSchemeDialog.PrimaryButtonText" xml:space="preserve">
     <value>Cancel</value>
+  </data>
+  <data name="UnsupportedSchemeText.Text" xml:space="preserve">
+    <value>This link type is currently not supported.</value>
   </data>
 </root>
