--- a/src/cascadia/TerminalControl/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalControl/Resources/en-US/Resources.resw
@@ -175,4 +175,10 @@
   <data name="TermControl_RendererRetryButton.Content" xml:space="preserve">
     <value>Resume</value>
   </data>
+  <data name="HowToOpenRun.Text" xml:space="preserve">
+    <value>ctrl+click to follow link</value>
+  </data>
+  <data name="HowToOpenRun.FontStyle" xml:space="preserve">
+    <value>Italic</value>
+  </data>
 </root>
